plugins {
    id 'java'
    id 'maven-publish'
}

group = 'io.github.hubertkuch'
version = '1.0.0'

repositories {
    mavenCentral()
}

java {
    withSourcesJar()
    withJavadocJar()
    sourceCompatibility = JavaVersion.VERSION_25
    targetCompatibility = JavaVersion.VERSION_25
}

publishing {
    repositories {
        maven {
            name = "JKona"
            description = "Kona is a lightweight framework for building cross-platform desktop native applications using Java and web technologies."
            url = uri("https://maven.pkg.github.com/hubertkuch/jkona")

            credentials {
                username = project.properties["github.username"] as String
                password = project.properties["github.token"] as String
            }
        }
    }

    publications {
        gpr(MavenPublication) {
            from(components.java)
        }
    }
}

dependencies {
    implementation 'com.google.auto.factory:auto-factory:1.1.0'
    implementation("org.reflections:reflections:0.10.2")

    implementation("com.google.code.gson:gson:2.10.1")

    implementation 'org.slf4j:slf4j-api:2.0.13'
    implementation 'org.slf4j:slf4j-simple:2.0.13'

    testImplementation platform('org.junit:junit-bom:5.10.0')
    testImplementation 'org.junit.jupiter:junit-jupiter'
    testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
}

test {
    useJUnitPlatform()
    jvmArgs += "--enable-preview"
}


tasks.withType(JavaCompile) {
    options.compilerArgs += "--enable-preview"
}